# ppmloader

./: .gitmodules  CMakeLists.txt  README.md  build.bat  resource.rc
core/: CMakeLists.txt
core/src/: PPMLoader.cpp  PPMLoader.h  Timer.h
src/: Main.cpp  PPMLoader.cpp  Renderer.cpp  Renderer.h  Window.cpp  Window.h
test/: valid.ppm
